--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "ejs": "^2.6.2",
     "express": "^4.17.1",
-    "mongoose": "^5.6.1"
+    "js": "^0.1.0",
+    "mongoose": "^5.6.1",
+    "path": "^0.12.7"
   }
 }
